1999-04-29  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>

	* Makefile.am (noinst_LIBRARIES): Add libgdkgl.a and libclock.a.
	(libgdkgl_a_SOURCES): Add gdkgl.c.
	(libclock_a_SOURCES): Add simple.c, module.cc, options.cc, and
	clockoptions.cc.
	(rglclock_SOURCES): Remove gdkgl.c.
	(rglclock_SOURCES): Remove files added to libclock_a_SOURCES.
	(rglclock_LDADD): Add libclock.a and libgdkgl.a.

	* options.cc (populate, create_dialog): Add assertions.
	(create_widget, add_page, remove_widget): Add logging.

	* glclock.cc (edit_options): Use gtk_widget_destroy.

1999-04-28  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>

	* NEWS: Modified.

	* Makefile.am (EXTRA_DIST): Add VERSION-ID.

	* VERSION-ID: New file.

	* configure.in: Add `--with-nana'.

	* glclock.cc (edit_options): Rewrote using the new dialog classes.

	* glclock.h (class clock_options_dialog): Use the new
	options_dialog.

	* options.cc: Rewrite class options_dialog.

	* glclock.h: Include "options.h".
	(class clock_options_dialog): Renamed from options_dialog.

	* Makefile.am (rglclock_SOURCES): Add clockoptions.cc.
	(noinst_HEADERS): Add options.h.

	* options.h: New file.

	* clockoptions.cc: New file.

1999-04-07  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>

	* README: Modified.

	* NEWS: Modified.

	* options.cc (populate): Replace gtk_window_set_default with
	gtk_window_set_focus.
	* about.cc (populate): Likewise.

	* glclock.h (class glclock): Use GtkItemFactory.

	* glclock.cc: Use GtkItemFactory instead of GtkMenuFactory.
	(menu_activate): Removed.
	(describe): Removed.
	(~glclock, glclock): Replace gtk_menu_factory_destroy with
	gtk_object_unref.
	(menu_quit, edit_options): Change arguments.
	(glclock): Change the menu initialization.
	(menu_about): New function.

	* options.cc (options_dialog): Use gtk_window_set_transient_for.
	(finish_realize): Removed.  Also remove all references.

	* about.cc (about_dialog): Use gtk_window_set_transient_for.