@@ -55,12 +55,17 @@ private:
   module *m;
   GtkWidget *drawing_area;
   GtkItemFactory *menu_factory;
+  int timeout_rate;
   guint timeout_id;
   GdkGLContext *context;
   double rot_velocity;
   double rot_x, rot_y, rot_z;
   time_t t;
   double press_x, press_y;
+public:
+  int update_rate() const
+    {return timeout_rate;}
+  void set_update_rate(int);
 };
 
 /* The options dialog.  */
