@@ -1,3 +1,7 @@
+1999-05-03  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>
+
+	* Update po files.
+
 1999-04-28  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>
 
 	* ja.po: Updated.
